# warehouse-robot-stabilization

./: README.md  requirements.txt
docs/: methodology.md
gazebo_simulator/: GITHUB_SETUP_GUIDE.md  (+5 more)
gazebo_simulator/ros2_ws/src/kolestel_rover_description/: CMakeLists.txt  package.xml
gazebo_simulator/ros2_ws/src/kolestel_rover_description/config/: ros_gz_bridge.yaml  tracking.rviz  warehouse_map.yaml
gazebo_simulator/ros2_ws/src/kolestel_rover_description/launch/: gazebo.launch.py  sim_cv_nav.launch.py  sim_tracking.launch.py
gazebo_simulator/ros2_ws/src/kolestel_rover_description/meshes/: wheel_fl.stl  wheel_fr.stl  wheel_rl.stl  wheel_rr.stl
gazebo_simulator/ros2_ws/src/kolestel_rover_description/models/aruco_marker_0/: model.config  model.sdf
gazebo_simulator/ros2_ws/src/kolestel_rover_description/models/aruco_marker_1/: model.config  model.sdf
gazebo_simulator/ros2_ws/src/kolestel_rover_description/models/aruco_marker_10/: model.config  model.sdf
gazebo_simulator/ros2_ws/src/kolestel_rover_description/models/aruco_marker_11/: model.config  model.sdf
gazebo_simulator/ros2_ws/src/kolestel_rover_description/models/aruco_marker_12/: model.config  model.sdf
gazebo_simulator/ros2_ws/src/kolestel_rover_description/scripts/: cv_navigator.py  odom_to_tf.py  person_follower_node.py  person_tracker_node.py  pointcloud_to_livox.py  video_stabilizer_node.py
gazebo_simulator/ros2_ws/src/kolestel_rover_description/urdf/: kolestel_rover.urdf.xacro
gazebo_simulator/ros2_ws/src/kolestel_rover_description/worlds/: user_saved_layout.sdf  warehouse_with_people.sdf
(+98 files in other folders)
